generate image of terrain map

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,13 @@ Thumbs.db
 *.flv
 *.mov
 *.wmv
+episodes
+evaluation_metrics
+evaluation_metrics_teacher
+evaluation_metrics_teacherv2
+old
+results
+weights
 
 #
 images/
